반응형 작업중

--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -508,14 +508,29 @@ pre {
   color: #ccc;
 }
 
-.backArea {
-  position: absolute;
-  left: 340px;
-  top: 22px;
-  z-index: 1000;
+.headArea {
+  position: relative;
+  z-index: 960;
+  width: calc(100% - 300px);
+  margin-left: auto;
+  padding-top: 20px;
 }
 
-.backArea .btnBack {
+.headArea > .inner {
+  margin: 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  /* 모바일 */
+}
+
+.headArea > .inner .backArea .btnBack {
   position: relative;
   display: block;
   width: 30px;
@@ -526,7 +541,7 @@ pre {
   background-size: 30px 30px;
 }
 
-.backArea .btnBack:before {
+.headArea > .inner .backArea .btnBack:before {
   content: '';
   opacity: 0;
   visibility: hidden;
@@ -542,23 +557,16 @@ pre {
   background-color: rgba(221, 221, 221, 0.5);
 }
 
-.backArea .btnBack:hover:before {
+.headArea > .inner .backArea .btnBack:hover:before {
   opacity: 1;
   visibility: visible;
 }
 
-.backArea.none {
+.headArea > .inner .backArea.none {
   display: none;
 }
 
-.utilArea {
-  position: absolute;
-  top: 22px;
-  right: 30px;
-  z-index: 1000;
-}
-
-.utilArea ul {
+.headArea > .inner .utilArea ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -567,11 +575,11 @@ pre {
           align-items: center;
 }
 
-.utilArea li {
+.headArea > .inner .utilArea li {
   position: relative;
 }
 
-.utilArea li .toolTip {
+.headArea > .inner .utilArea li .toolTip {
   opacity: 0;
   visibility: hidden;
   position: absolute;
@@ -582,7 +590,7 @@ pre {
   z-index: 100;
 }
 
-.utilArea li .toolTip span {
+.headArea > .inner .utilArea li .toolTip span {
   display: block;
   min-width: 60px;
   padding: 5px 0;
@@ -596,7 +604,7 @@ pre {
   background-color: #333;
 }
 
-.utilArea li:before {
+.headArea > .inner .utilArea li:before {
   content: '';
   opacity: 0;
   visibility: hidden;
@@ -614,40 +622,40 @@ pre {
   background-color: rgba(221, 221, 221, 0.5);
 }
 
-.utilArea li button, .utilArea li a {
+.headArea > .inner .utilArea li button, .headArea > .inner .utilArea li a {
   display: block;
   width: 30px;
   height: 30px;
 }
 
-.utilArea li button.btnMail, .utilArea li a.btnMail {
+.headArea > .inner .utilArea li button.btnMail, .headArea > .inner .utilArea li a.btnMail {
   background: url("../../images/ico/ico-mail.svg") no-repeat center;
 }
 
-.utilArea li button.btnMail:hover .toolTip.mail, .utilArea li a.btnMail:hover .toolTip.mail {
+.headArea > .inner .utilArea li button.btnMail:hover .toolTip.mail, .headArea > .inner .utilArea li a.btnMail:hover .toolTip.mail {
   opacity: 1;
   visibility: visible;
 }
 
-.utilArea li button.btnShare, .utilArea li a.btnShare {
+.headArea > .inner .utilArea li button.btnShare, .headArea > .inner .utilArea li a.btnShare {
   background: url("../../images/ico/ico-share-bk.svg") no-repeat center;
 }
 
-.utilArea li button.btnShare:hover .toolTip.share, .utilArea li a.btnShare:hover .toolTip.share {
+.headArea > .inner .utilArea li button.btnShare:hover .toolTip.share, .headArea > .inner .utilArea li a.btnShare:hover .toolTip.share {
   opacity: 1;
   visibility: visible;
 }
 
-.utilArea li button.btnMore, .utilArea li a.btnMore {
+.headArea > .inner .utilArea li button.btnMore, .headArea > .inner .utilArea li a.btnMore {
   background: url("../../images/ico/ico-more.svg") no-repeat center;
 }
 
-.utilArea li button.btnMore:hover .toolTip.more, .utilArea li a.btnMore:hover .toolTip.more {
+.headArea > .inner .utilArea li button.btnMore:hover .toolTip.more, .headArea > .inner .utilArea li a.btnMore:hover .toolTip.more {
   opacity: 1;
   visibility: visible;
 }
 
-.utilArea li button.btnDarkMode, .utilArea li a.btnDarkMode {
+.headArea > .inner .utilArea li button.btnDarkMode, .headArea > .inner .utilArea li a.btnDarkMode {
   width: 30px;
   height: 30px;
   background-image: url("../images/ico/ico-brightness.png");
@@ -656,18 +664,34 @@ pre {
   background-size: 30px 30px;
 }
 
-.utilArea li button.btnDarkMode:hover .toolTip.more, .utilArea li a.btnDarkMode:hover .toolTip.more {
+.headArea > .inner .utilArea li button.btnDarkMode:hover .toolTip.more, .headArea > .inner .utilArea li a.btnDarkMode:hover .toolTip.more {
   opacity: 1;
   visibility: visible;
 }
 
-.utilArea li + li {
+.headArea > .inner .utilArea li + li {
   margin-left: 30px;
 }
 
-.utilArea li:hover:before {
+.headArea > .inner .utilArea li:hover:before {
   opacity: 1;
   visibility: visible;
+}
+
+.headArea > .inner .moreArea {
+  display: none;
+  /*position: absolute; top: 20px; left: 20px; z-index: 1200;*/
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.headArea > .inner .moreArea .btnMobileMore {
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-size: 24px 24px;
+  background-position: center;
+  background-image: url("../../images/mobile/ico-mobile-more.png");
 }
 
 .moreSubMenu {
@@ -1490,26 +1514,6 @@ code[class*=language-], pre[class*=language-] pre {
   font-family: '맑은 고딕';
 }
 
-/* 모바일 */
-.moreArea {
-  display: none;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 1200;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.moreArea .btnMobileMore {
-  width: 24px;
-  height: 24px;
-  background-repeat: no-repeat;
-  background-size: 24px 24px;
-  background-position: center;
-  background-image: url("../../images/mobile/ico-mobile-more.png");
-}
-
 /* icon */
 i.ico {
   display: inline-block;
@@ -1591,7 +1595,7 @@ i.ico.center {
   display: inline-block;
   line-height: 32px;
   font-size: 20px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
 }
 
@@ -1614,7 +1618,7 @@ i.ico.center {
 
 .wrap.pre.headerFixed .contents span, .wrap.pre.headerScroll .contents span, .wrap.pre.headerToggle .contents span {
   font-size: 30px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
 }
 
@@ -1725,7 +1729,7 @@ i.ico.center {
 .wrap.pre.gnbHover #gnb ul.menuList > li > a, .wrap.pre.gnb-li-hover #gnb ul.menuList > li > a, .wrap.pre.gnbFind #gnb ul.menuList > li > a {
   min-width: 80px;
   font-size: 24px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #000;
 }
 
@@ -1743,7 +1747,7 @@ i.ico.center {
 .wrap.pre.gnbHover #gnb ul.menuList > li .depthTwo > li > a, .wrap.pre.gnb-li-hover #gnb ul.menuList > li .depthTwo > li > a, .wrap.pre.gnbFind #gnb ul.menuList > li .depthTwo > li > a {
   display: block;
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #444;
 }
 
@@ -1789,7 +1793,7 @@ i.ico.center {
   text-align: center;
   font-size: 36px;
   color: #fff;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   background-color: #444;
 }
 
@@ -1851,7 +1855,7 @@ i.ico.center {
 
 .wrap.pre.footerBasic #footer > .inner .linkArea ul li a {
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
 }
 
@@ -1933,7 +1937,7 @@ i.ico.center {
 
 .wrap.pre.footerFixed #footer > .inner .linkArea ul li a {
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
 }
 
@@ -2023,7 +2027,7 @@ i.ico.center {
   padding: 50px;
   border: 2px solid #000;
   font-size: 22px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 .wrap.pre.bgImage .resultCont {
@@ -2032,7 +2036,7 @@ i.ico.center {
 
 .wrap.pre.bgImage .resultCont .imgDiv {
   height: 600px;
-  background-image: url("../images/common/1903x600.png");
+  background-image: url("../../images/common/1903x600.png");
   background-repeat: no-repeat;
 }
 
@@ -2092,7 +2096,7 @@ i.ico.center {
   transition: .5s;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  background: url("../images/ico/ico-down.svg") no-repeat;
+  background: url("../../images/ico/ico-down.svg") no-repeat;
 }
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li a {
@@ -2115,7 +2119,7 @@ i.ico.center {
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a {
   display: block;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   font-size: 18px;
   color: rgba(255, 255, 255, 0.8);
   text-indent: 50px;
@@ -2146,7 +2150,7 @@ i.ico.center {
 
 .wrap.pre.floating #floatingMenu {
   position: fixed;
-  right: 20px;
+  right: 40px;
   bottom: 20px;
 }
 
@@ -2168,13 +2172,6 @@ i.ico.center {
 .wrap.pre.floating #floatingMenu .menuArea ul.menuList {
   position: absolute;
   top: -211px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .wrap.pre.floating #floatingMenu .menuArea ul.menuList li {
@@ -2227,7 +2224,7 @@ i.ico.center {
   height: 200px;
   max-width: 200px;
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
   background-color: #000;
 }
@@ -2500,7 +2497,7 @@ i.ico.center {
           box-sizing: border-box;
   font-size: 16px;
   border-radius: 4px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
           box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
@@ -2553,7 +2550,7 @@ i.ico.center {
   cursor: pointer;
   text-align: center;
   color: #000;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 .tabWrap.type01 > .tabNav > .tabList > li.orange.active:before {
@@ -2608,7 +2605,7 @@ i.ico.center {
           box-sizing: border-box;
   text-align: center;
   background-color: #fff;
-  font-family: 'Noto sans';
+  font-family: "Noto Sans";
 }
 
 .tabWrap.typeEx > .tabNav > .tabList > li.active {
@@ -2656,7 +2653,7 @@ i.ico.center {
   display: block;
   line-height: 28px;
   color: #222;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   cursor: pointer;
 }
 
@@ -2695,7 +2692,7 @@ textarea {
   padding: 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   border-radius: 4px;
   color: #222;
   font-size: 14px;
@@ -2734,7 +2731,7 @@ input {
   padding-left: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   border-radius: 4px;
   color: #222;
   background-color: #fff;
@@ -2756,7 +2753,7 @@ input[type="image"], input[type="color"], input[type="button"] {
   padding: 0 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   border-radius: 2px;
   color: #222;
   vertical-align: middle;
@@ -2799,7 +2796,7 @@ input[type="image"], input[type="color"], input[type="button"] {
   vertical-align: middle;
   font-size: 14px;
   color: #222;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   cursor: pointer;
 }
 
@@ -2934,7 +2931,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 .mouseMenu li {
   width: 150px;
   padding: 5px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 .mouseMenu li:hover {
@@ -3155,43 +3152,46 @@ input[type="image"], input[type="color"], input[type="button"] {
   .leftArea.active {
     left: 0;
   }
-  .utilArea {
+  .headArea {
+    width: 100%;
+  }
+  .headArea > .inner .utilArea {
     -webkit-transition: .3s;
     transition: .3s;
   }
-  .utilArea li a.btnMail {
+  .headArea > .inner .utilArea li a.btnMail {
     width: 22px;
     height: 22px;
     background-size: 22px 22px;
   }
-  .utilArea li button.btnShare {
+  .headArea > .inner .utilArea li button.btnShare {
     width: 22px;
     height: 22px;
     background-size: 22px 22px;
   }
-  .utilArea li button.btnMore {
+  .headArea > .inner .utilArea li button.btnMore {
     width: 22px;
     height: 22px;
     background-size: 22px 22px;
   }
-  .utilArea li:before {
+  .headArea > .inner .utilArea li:before {
     width: 34px;
     height: 34px;
   }
-  .utilArea.move {
+  .headArea > .inner .utilArea.move {
     -webkit-transform: translate(calc(100% - -28px), 0);
             transform: translate(calc(100% - -28px), 0);
   }
-  .topArea {
-    display: none;
+  .headArea > .inner .topArea {
+    display: none !important;
   }
-  .moreArea {
+  .headArea > .inner .moreArea {
     display: block;
   }
-  .moreArea.active {
+  .headArea > .inner .moreArea.active {
     left: 320px;
   }
-  .backArea {
+  .headArea > .inner .backArea {
     display: none !important;
   }
   .rightArea {
@@ -3209,8 +3209,8 @@ input[type="image"], input[type="color"], input[type="button"] {
     font-size: 14px;
   }
   .rightArea.move {
-    -webkit-transform: translate(calc(100% - 70px), 0);
-            transform: translate(calc(100% - 70px), 0);
+    -webkit-transform: translate(calc(100% - 90px), 0);
+            transform: translate(calc(100% - 90px), 0);
   }
   .innerTxt > strong {
     font-size: 18px;
@@ -3292,6 +3292,23 @@ input[type="image"], input[type="color"], input[type="button"] {
   }
   .wrap.pre.gnbFind #gnb ul.menuList li {
     min-width: auto;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #wrap {
+    overflow: hidden;
+  }
+  .leftArea.active {
+    width: calc(100% - 200px);
+  }
+  .rightArea {
+    position: static;
+  }
+  .rightArea.move {
+    margin: 0;
+    -webkit-transform: translate(calc(100% - 180px), 0);
+            transform: translate(calc(100% - 180px), 0);
   }
 }
 /*# sourceMappingURL=component.css.map */
