--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -204,57 +204,70 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
   }
 }
 
-.backArea{position: absolute; left: 340px; top: 22px; z-index: 1000;
-  .btnBack{position: relative; display: block; width: 30px; height: 30px; background-image: url("../../images/ico/ico-home.png"); 
-    background-repeat: no-repeat; background-position: center; background-size: 30px 30px;
-    &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: -5px; top: -5px; z-index: -1;
-      width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
-    &:hover{
-      &:before{opacity: 1; visibility: visible;}
+
+.headArea{position: relative; z-index: 960; width: calc(100% - 300px); margin-left: auto; padding-top: 20px;
+  >.inner{margin: 0 20px; display: flex;align-items: center; justify-content: space-between;
+
+    .backArea{
+      .btnBack{position: relative; display: block; width: 30px; height: 30px; background-image: url("../../images/ico/ico-home.png"); 
+        background-repeat: no-repeat; background-position: center; background-size: 30px 30px;
+        &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: -5px; top: -5px; z-index: -1;
+          width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
+        &:hover{
+          &:before{opacity: 1; visibility: visible;}
+        }
+      }
+      &.none{display: none;}
+    }
+
+    .utilArea{
+      ul{display: flex;align-items: center;}
+      li{position: relative;
+        .toolTip{opacity: 0; visibility: hidden; position: absolute; top: 42px; left: -14px; transition: .5s ease-in-out; z-index: 100;
+          span{display: block; min-width: 60px; padding: 5px 0; box-sizing: border-box; color: $cfff;
+          font-family: $d-fz; font-size: 11px; border-radius: 3px; text-align: center;
+          background-color: $c333;}
+        }
+        &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: 50%; transform: translateX(-50%); top: -5px; z-index: -1;
+        width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
+        button,a{display: block; width: 30px;height: 30px;
+          &.btnMail{background: url("../../images/ico/ico-mail.svg")no-repeat center;
+            &:hover{
+              .toolTip.mail{opacity: 1; visibility: visible;}
+            }
+          }
+          &.btnShare{background: url("../../images/ico/ico-share-bk.svg")no-repeat center;
+            &:hover{
+              .toolTip.share{opacity: 1; visibility: visible;}
+            }
+          }
+          &.btnMore{background: url("../../images/ico/ico-more.svg")no-repeat center;
+            &:hover{
+              .toolTip.more{opacity: 1; visibility: visible;}
+            }
+          }
+          &.btnDarkMode{width: 30px; height: 30px; background-image: url("../images/ico/ico-brightness.png"); background-position: center;
+          background-repeat: no-repeat; background-size: 30px 30px;
+            &:hover{
+              .toolTip.more{opacity: 1; visibility: visible;}
+            }
+          }
+        }
+        +li{margin-left: 30px;}
+        &:hover{
+          &:before{opacity: 1; visibility: visible;}
+        }
+      }
+    }
+
+    /* 모바일 */
+    .moreArea{display: none; /*position: absolute; top: 20px; left: 20px; z-index: 1200;*/ transition: .3s;
+      .btnMobileMore{width: 24px; height: 24px; background-repeat: no-repeat; background-size: 24px 24px; background-position: center; 
+      background-image: url("../../images/mobile/ico-mobile-more.png");}
     }
   }
-  &.none{display: none;}
 }
 
-.utilArea{position: absolute; top: 22px; right: 30px; z-index: 1000;
-  ul{display: flex;align-items: center;}
-  li{position: relative;
-    .toolTip{opacity: 0; visibility: hidden; position: absolute; top: 42px; left: -14px; transition: .5s ease-in-out; z-index: 100;
-      span{display: block; min-width: 60px; padding: 5px 0; box-sizing: border-box; color: $cfff;
-      font-family: $d-fz; font-size: 11px; border-radius: 3px; text-align: center;
-      background-color: $c333;}
-    }
-    &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: 50%; transform: translateX(-50%); top: -5px; z-index: -1;
-    width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
-    button,a{display: block; width: 30px;height: 30px;
-      &.btnMail{background: url("../../images/ico/ico-mail.svg")no-repeat center;
-        &:hover{
-          .toolTip.mail{opacity: 1; visibility: visible;}
-        }
-      }
-      &.btnShare{background: url("../../images/ico/ico-share-bk.svg")no-repeat center;
-        &:hover{
-          .toolTip.share{opacity: 1; visibility: visible;}
-        }
-      }
-      &.btnMore{background: url("../../images/ico/ico-more.svg")no-repeat center;
-        &:hover{
-          .toolTip.more{opacity: 1; visibility: visible;}
-        }
-      }
-      &.btnDarkMode{width: 30px; height: 30px; background-image: url("../images/ico/ico-brightness.png"); background-position: center;
-      background-repeat: no-repeat; background-size: 30px 30px;
-        &:hover{
-          .toolTip.more{opacity: 1; visibility: visible;}
-        }
-      }
-    }
-    +li{margin-left: 30px;}
-    &:hover{
-      &:before{opacity: 1; visibility: visible;}
-    }
-  }
-}
 
 .moreSubMenu{display: none; position: absolute; top: 40px; right: 0; z-index: 150;
   >ul{width: 95px;flex-direction: column; border: 1px solid $cddd; box-shadow: 0px 0px 5px 1px $cddd;
@@ -513,12 +526,6 @@ code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !importa
 width: 290px; padding: 12px; box-sizing: border-box; border-radius: 4px; z-index: 9999;
 background-color: rgba($color: $blackBg, $alpha: 0.65);
   span{display: inline-block; text-align: center; font-size: 14px; color: $cfff; font-family: '맑은 고딕';}
-}
-
-/* 모바일 */
-.moreArea{display: none; position: absolute; top: 20px; left: 20px; z-index: 1200; transition: .3s;
-  .btnMobileMore{width: 24px; height: 24px; background-repeat: no-repeat; background-size: 24px 24px; background-position: center; 
-  background-image: url("../../images/mobile/ico-mobile-more.png");}
 }
 
 /* icon */
