--- a/pre-build/scss/common/media.scss
+++ b/pre-build/scss/common/media.scss
@@ -30,28 +30,37 @@
                 li a{font-size: 14px;}
             }
         }
-        &.active{left: 0;}
-    }
-    .utilArea{transition: .3s;
-        li{
-            a.btnMail{width: 22px; height: 22px; background-size: 22px 22px;}
-            button{
-                &.btnShare{width: 22px; height: 22px; background-size: 22px 22px;}
-                &.btnMore{width: 22px; height: 22px; background-size: 22px 22px;}
-            }
-            &:before{width: 34px; height: 34px;}
+        &.active{left: 0;
+            ~.headArea{width: calc(100% - 300px);}
+            ~.rightArea{left: 300px;}
         }
-        &.move{transform: translate(calc(100% - -28px),0);} 
     }
-    .topArea{display: none;}
-    .moreArea{display: block;
-        &.active{left: 320px;} 
+
+    .headArea{width: 100%; transition: .3s;
+        >.inner{
+            .utilArea{transition: .3s;
+                li{
+                    a.btnMail{width: 22px; height: 22px; background-size: 22px 22px;}
+                    button{
+                        &.btnShare{width: 22px; height: 22px; background-size: 22px 22px;}
+                        &.btnMore{width: 22px; height: 22px; background-size: 22px 22px;}
+                    }
+                    &:before{width: 34px; height: 34px;}
+                }
+                // &.move{transform: translate(calc(100% - -28px),0);} 
+            }
+            .topArea{display: none !important;}
+            .moreArea{display: block;
+                &.active{left: 320px;} 
+            }
+            .backArea{display: none !important;}
+        }
     }
-    .backArea{display: none !important;}
+    
     .rightArea{left: 0; width: auto; transition: .3s; padding: 85px 0 20px 0; margin: 0 20px;
         .inner{padding: 0;}
         .mainTxt{font-size: 14px;}
-        &.move{transform: translate(calc(100% - 70px),0);}
+        // &.move{/*transform: translate(calc(100% - 90px),0);*/ transform: translate(calc(100% - 400px),0);}
     }
 
     .innerTxt > strong{font-size: 18px;}
@@ -109,4 +118,21 @@
             #gnb ul.menuList li{min-width: auto;}
         }
     }
+}
+
+@media screen and (max-width:600px){
+    .leftArea{
+        &.active{width: calc(100% - 100px);
+            ~.rightArea{left: 0; margin: 0; transform: translate(calc(100% - 180px),0);}
+        }
+    }
+    // .rightArea{
+    //     &.move{margin: 0; transform: translate(calc(100% - 180px),0);}
+    // }
+}
+
+@media screen and (max-width:500px){
+    #container{flex-direction: column;}
+    
+    
 }
