--- a/pre-build/html/layout/layout-centerEle.html
+++ b/pre-build/html/layout/layout-centerEle.html
@@ -12,7 +12,7 @@
         <ul class="leftMenu">
           <li>
             <a href="main.html" title="메인으로">
-              @@include('include/logo.html')
+              <img src="../../images/common/logo.png" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
             </a>
           </li>
@@ -25,13 +25,13 @@
             <span title="Header">Header</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Header fixed">Header fixed</a>
+                <a href="../html/header/header-header-fixed.html" title="Header fixed">Header fixed</a>
               </li>
               <li>
-                <a href="#" title="Header Toggle">Header Toggle</a>
+                <a href="../html/header/hedaer-header-toggle.html" title="Header Toggle">Header Toggle</a>
               </li>
               <li>
-                <a href="#" title="scroll Header">scroll Header</a>
+                <a href="../html/header/header-header-sticky.html" title="Sticky Header">Sticky Header</a>
               </li>
             </ul>
           </li>
@@ -39,13 +39,16 @@
             <span title="GNB">GNB</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="GNB Hover">GNB Hover</a>
+                <a href="../html/gnb/gnb-hover-full-dropdown.html" title="GNB Hover Full Dropdown">GNB Hover Full
+                  Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li Hover">GNB li Hover</a>
+                <a href="../html/gnb/gnb-menu-hover-full-dropdown.html" title="GNB Menu hover Full Dropdown">GNB Menu
+                  hover Full Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li find Hover">GNB li find Hover</a>
+                <a href="../html/gnb/gnb-hoverable-dropdown.html" title="GNB Hoverable Dropdown">GNB Hoverable
+                  Dropdown</a>
               </li>
             </ul>
           </li>
@@ -53,10 +56,10 @@
             <span title="Footer">Footer</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Footer basic">Footer basic</a>
+                <a href="../html/footer/footer-footer-basic.html" title="Footer basic">Footer basic</a>
               </li>
               <li>
-                <a href="#" title="Footer fixed">Footer fixed</a>
+                <a href="../html/footer/footer-footer-fixed.html" title="Footer fixed">Footer fixed</a>
               </li>
             </ul>
           </li>
@@ -64,22 +67,28 @@
             <span title="Layout">Layout</span>
             <ul class="leftSubMenu block">
               <li class="active">
-                <a href="layout-centerEle.html" title="Center element">Center element</a>
+                <a href="../html/layout/layout-centerEle.html" title="Center element">Center element</a>
               </li>
               <li>
-                <a href="layout-tab.html" title="Tab">Tab</a>
+                <a href="../html/layout/layout-tab.html" title="Tab">Tab</a>
               </li>
               <li>
-                <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
+                <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
               </li>
               <li>
-                <a href="#" title="Slide">Slide</a>
+                <a href="../html/layout/layout-leftMenu.html" title="Left menu">Left menu</a>
               </li>
               <li>
-                <a href="#" title="Flex">Flex</a>
+                <a href="../html/layout/layout-floatingMenu.html" title="Floating menu">Floating menu</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Slide">Slide</a>
               </li>
               <li>
-                <a href="#" title="Grid">Grid</a>
+                <a href="../html/layout/layout-flex.html" title="Flex">Flex</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Grid">Grid</a>
               </li>
             </ul>
           </li>
@@ -87,19 +96,19 @@
             <span title="Input">Input</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="input-inputStyle.html" title="Input">input</a>
+                <a href="../html/input/input-inputStyle.html" title="Input">input</a>
               </li>
               <li>
-                <a href="input-radioStyle.html" title="Radio">radio</a>
+                <a href="../html/input/input-radioStyle.html" title="Radio">radio</a>
               </li>
               <li>
-                <a href="input-selectStyle.html" title="Select">select</a>
+                <a href="../html/input/input-selectStyle.html" title="Select">select</a>
               </li>
               <li>
-                <a href="input-textareaStyle.html" title="textarea">textarea</a>
+                <a href="../html/input/input-textareaStyle.html" title="textarea">textarea</a>
               </li>
               <li>
-                <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
+                <a href="../html/input/input-chkboxStyle.html" title="checkbox">checkbox</a>
               </li>
             </ul>
           </li>
@@ -107,10 +116,10 @@
             <span title="Scroll element">Scroll element</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
+                <a href="../html/scrollele/scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
               </li>
               <li>
-                <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
+                <a href="../html/scrollele/scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
               </li>
             </ul>
           </li>
@@ -118,38 +127,45 @@
             <span title="Custom">Custom</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
+                <a href="../html/custom/custom-contextMenu.html" title="Context Menu">Context Menu</a>
               </li>
               <li>
-                <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
+                <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
+              </li>
+              <li>
+                <a href="../html/custom/custom-toolTip.html" title="toolTip">toolTip</a>
               </li>
             </ul>
           </li>
           <li>
-            <span title="Interaction">Interaction</span>
+            <span title="Popup">Popup</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Hover transfrom">Hover transfrom</a>
+                <a href="../html/popup/popup-popup-showhide.html" title="Popup show/hide">Popup show/hide</a>
               </li>
               <li>
-                <a href="#" title="FadeIn & FadeOut">FadeIn & FadeOut</a>
+                <a href="../html/popup/popup-toast.html" title="Toast popup">Toast popup</a>
               </li>
               <li>
-                <a href="#" title="Click popup">Click popup</a>
+                <a href="../html/popup/popup-drag.html" title="Drag popup">Drag popup</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span title="Etc">Etc</span>
+            <ul class="leftSubMenu">
+              <li>
+                <a href="#" title="Animation element">Animation element</a>
+              </li>
+              <li>
+                <a href="#" title="Text ellipsis">Text ellipsis</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Key frames">Key frames</a>
               </li>
             </ul>
           </li>
         </ul>
-      </div>
-      <div class="moreArea">
-        <button type="button" class="btnMobileMore">
-          <span class="hidden">메뉴 열기</span>
-        </button>
-      </div>
-      <div class="backArea">
-        <button type="button" class="btnBack">
-          <span class="hidden">뒤로가기</span>
-        </button>
       </div>
 
       @@include('include/util.html')
@@ -173,40 +189,40 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-  &lt;div class="resultCont type01"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;Flex를 이용한 가운데 정렬&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;div class="container"&gt;
-          &lt;div class="centerBox"&gt;
-              &lt;span&gt;가운데 정렬&lt;/span&gt;
-          &lt;/div&gt;
-      &lt;/div&gt;
-  &lt;/div&gt;
+&lt;div class="resultCont type01"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;Flex를 이용한 가운데 정렬&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;div class="container"&gt;
+        &lt;div class="centerBox"&gt;
+            &lt;span&gt;가운데 정렬&lt;/span&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
 
-  &lt;div class="resultCont type02"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;Flex + vh를 이용한 가운데 정렬&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;div class="container"&gt;
-          &lt;div class="innerBox"&gt;
-              &lt;div class="centerBox"&gt;
-                  &lt;span&gt;가운데 정렬&lt;/span&gt;
-              &lt;/div&gt;
-          &lt;/div&gt;
-      &lt;/div&gt;
-  &lt;/div&gt;
+&lt;div class="resultCont type02"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;Flex + vh를 이용한 가운데 정렬&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;div class="container"&gt;
+        &lt;div class="innerBox"&gt;
+            &lt;div class="centerBox"&gt;
+                &lt;span&gt;가운데 정렬&lt;/span&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
 
-  &lt;div class="resultCont type03"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;position을 이용한 가운데 정렬&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;div class="container"&gt;
-          &lt;div class="centerBox"&gt;
-              &lt;span&gt;가운데 정렬&lt;/span&gt;
-          &lt;/div&gt;
-      &lt;/div&gt;
-  &lt;/div&gt;
+&lt;div class="resultCont type03"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;position을 이용한 가운데 정렬&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;div class="container"&gt;
+        &lt;div class="centerBox"&gt;
+            &lt;span&gt;가운데 정렬&lt;/span&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
                               </code>
                             </pre>
                 </div>
@@ -216,20 +232,20 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-scss">
-  .resultCont{position: relative; padding: 50px; box-sizing: border-box;
-      &.type01{height: 100%; 
-          .container{height: 100%; display: flex; align-items: center; justify-content: center;}
-      }
-      &.type02{
-          .innerBox{display: flex; align-items: center; justify-content: center; height: 100vh;
-      }
-      }
-      &.type03{height: 100%;
-          .container{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
-      }
-  }
-  .titleH3{margin-bottom: 0; padding-bottom: 10px;}
-  .centerBox{padding: 50px; border: 2px solid #000; font-size: 22px; font-family: 'Noto Sans';}
+.resultCont{position: relative; padding: 50px; box-sizing: border-box;
+    &.type01{height: 100%; 
+        .container{height: 100%; display: flex; align-items: center; justify-content: center;}
+    }
+    &.type02{
+        .innerBox{display: flex; align-items: center; justify-content: center; height: 100vh;
+    }
+    }
+    &.type03{height: 100%;
+        .container{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
+    }
+}
+.titleH3{margin-bottom: 0; padding-bottom: 10px;}
+.centerBox{padding: 50px; border: 2px solid #000; font-size: 22px; font-family: 'Noto Sans';}
                               </code>
                           </pre>
                 </div>
@@ -239,52 +255,52 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-css">
-  .resultCont {
-      position: relative;
-      padding: 50px;
-      box-sizing: border-box;
-  }
+.resultCont {
+    position: relative;
+    padding: 50px;
+    box-sizing: border-box;
+}
 
-  .resultCont.type01 {
-      height: 100%;
-  }
+.resultCont.type01 {
+    height: 100%;
+}
 
-  .resultCont.type01 .container {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-  }
+.resultCont.type01 .container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-  .resultCont.type02 .innerBox {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-  }
+.resultCont.type02 .innerBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
 
-  .resultCont.type03 {
-      height: 100%;
-  }
+.resultCont.type03 {
+    height: 100%;
+}
 
-  .resultCont.type03 .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-  }
+.resultCont.type03 .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-  .titleH3 {
-      margin-bottom: 0;
-      padding-bottom: 10px;
-  }
+.titleH3 {
+    margin-bottom: 0;
+    padding-bottom: 10px;
+}
 
-  .centerBox {
-      padding: 50px;
-      border: 2px solid #000;
-      font-size: 22px;
-      font-family: 'Noto Sans';
-  }
+.centerBox {
+    padding: 50px;
+    border: 2px solid #000;
+    font-size: 22px;
+    font-family: 'Noto Sans';
+}
                               </code>
                             </pre>
                 </div>
