--- a/pre-build/scss/scss-build/media.css
+++ b/pre-build/scss/scss-build/media.css
@@ -193,13 +193,19 @@
 
 @media screen and (max-width: 600px) {
   .leftArea.active {
-    width: calc(100% - 100px);
+    min-width: 40%;
+    max-width: 200px;
   }
   .leftArea.active ~ .rightArea {
     left: 0;
     margin: 0;
-    -webkit-transform: translate(calc(100% - 180px), 0);
-            transform: translate(calc(100% - 180px), 0);
+    -webkit-transform: translate(calc(100% - 80px), 0);
+            transform: translate(calc(100% - 80px), 0);
+  }
+  .leftArea.active ~ .headArea {
+    width: 100%;
+    -webkit-transform: translate(calc(100% - 100px), 0);
+            transform: translate(calc(100% - 100px), 0);
   }
 }
 
