왼쪽메뉴 경로 재수정

--- a/pre-build/scss/common/variable.scss
+++ b/pre-build/scss/common/variable.scss
@@ -15,6 +15,7 @@ $emphasisType02: #1694d2 !default;
 /* background */
 $blueBg : $emphasisType01;
 $whiteBg : $cfff;
+$cccBg : $c-ccc;
 $dddBg : $cddd;
 $_222Bg : $c222;
 $_333Bg : $c333;
