--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -128,27 +128,7 @@ pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
       a:hover{text-decoration: underline;}
     }
   }
-
-  // &.layoutSlide{
-  //   .resultCont{position: relative; padding: 50px; box-sizing: border-box;}
-  //   .customSlideWrap{position: relative; overflow: hidden;
-  //     .customSlideList{position:relative; display: flex; align-items: center;width: 400%; height: 300px;
-  //       .slideItem{flex: 1; overflow: hidden;
-         
-  //       }
-  //     }
-  //   }
-  //   .swiperItem{height: 100vh; display: flex;justify-content: center; align-items: center; font-size: 32px; font-family: 'Noto Sans';}
-  //   .slideButtonArea{
-  //     .swiper-button-next{right: 100px;}
-  //     .swiper-button-prev{left: 100px;}
-  //   }
-  // }
 }
-
-// svg.stroke{
-//   &.white{stroke: #fff; fill: #fff;}
-// }
 
 .topArea{display: none; position: fixed; right: 30px; bottom: 30px; z-index: 10000;
   .backtoTop{display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; 
@@ -223,6 +203,18 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
     .utilArea{
       ul{display: flex;align-items: center;}
       li{position: relative;
+        .moreSubMenu{display: none; position: absolute; top: 40px; right: 0; z-index: 150;
+          >ul{width: 95px;flex-direction: column; border: 1px solid $cddd; box-shadow: 0px 0px 5px 1px $cddd;
+          box-sizing: border-box; background-color: #f3f4f5;
+            >li{flex: 1; display: block; width: 100%; font-family: $d-fz; line-height: 30px; transition: .5s;
+              >a,span{width: auto; height: auto; color: $c20;text-align: center; white-space: nowrap; font-size: 12px;}
+              &:before{display: none;}
+              +li{margin-left: 0;}
+              &:hover{background-color: rgba($color: $cccBg, $alpha: 0.8);}
+            }
+          }
+          &.active{display: block;}
+        }
         .toolTip{opacity: 0; visibility: hidden; position: absolute; top: 42px; left: -14px; transition: .5s ease-in-out; z-index: 100;
           span{display: block; min-width: 60px; padding: 5px 0; box-sizing: border-box; color: $cfff;
           font-family: $d-fz; font-size: 11px; border-radius: 3px; text-align: center;
@@ -266,20 +258,6 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
       background-image: url("../../images/mobile/ico-mobile-more.png");}
     }
   }
-}
-
-
-.moreSubMenu{display: none; position: absolute; top: 40px; right: 0; z-index: 150;
-  >ul{width: 95px;flex-direction: column; border: 1px solid $cddd; box-shadow: 0px 0px 5px 1px $cddd;
-  box-sizing: border-box; background-color: #f3f4f5;
-    >li{flex: 1; display: block; width: 100%; font-family: $d-fz; line-height: 30px; transition: .5s;
-      >a,span{width: auto; height: auto; color: $c20;text-align: center; white-space: nowrap; font-size: 12px;}
-      &:before{display: none;}
-      +li{margin-left: 0;}
-      &:hover{background-color: rgba($color: #ccc, $alpha: 0.8);}
-    }
-  }
-  &.active{display: block;}
 }
 
 .resultArea{border: 1px solid $cddd; border-radius: 4px;
@@ -442,7 +420,7 @@ code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !importa
     li{padding: 0; list-style: none; font-family: $d-fz;}
   }
   .head{color: #3b3b3b; font-size: 18px; background: $cddd;
-    >ul{display: flex; border-top: 7px solid #222; border-bottom: 1px solid #5f5f5f; 
+    >ul{display: flex; border-top: 7px solid $_222Bg; border-bottom: 1px solid #5f5f5f; 
       >li{display: inherit; justify-content: center;
         >span{line-height: 65px;}
         &:first-child{width: 12%;}
@@ -503,7 +481,7 @@ code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !importa
   }
   .pageNumbers{margin: 0 50px;
     >a{display: inline-block; width: 32px; height: 32px; line-height: 32px; text-align: center; font-size: 16px;
-    border: 1px solid $cddd; border-radius: 4px; font-family: $d-fz; color: rgba($color: #222, $alpha: 0.5);
+    border: 1px solid $cddd; border-radius: 4px; font-family: $d-fz; color: rgba($color: $c222, $alpha: 0.5);
     transition: 0.35s ease-in-out;
       +a{margin-left: 5px;}
       &.active,&:hover{border-color: $blackBg; color: rgba($color: $blackBg, $alpha: 1.0)}
