--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -70,12 +70,6 @@ pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
       &:before{content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1;
       transform: scaleX(0); transform-origin: 0 50%;  transition-duration: 0.3s; transition-property: transform; 
       transition-timing-function: ease-out; background: $whiteBg;}
-      &:hover{
-        span{color: $c333;
-          &:after{background: url("../../images/ico/ico-arrow-right-bk-shw.png")no-repeat center;}
-        }
-        &:before{transform: scaleX(1);}
-      }
     }
     &.blue{background: #1694d2; transition: .5s ease-in-out;}
   }
@@ -124,19 +118,13 @@ pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
     .descDiv{font-size: 16px;
       p+p{margin-top: 15px;}
     }
-    .bottomDiv{display: flex; justify-content: flex-end; margin-top: 40px; font-size: 16px;
-      a:hover{text-decoration: underline;}
-    }
+    .bottomDiv{display: flex; justify-content: flex-end; margin-top: 40px; font-size: 16px;}
   }
 }
 
 .topArea{display: none; position: fixed; right: 30px; bottom: 30px; z-index: 10000;
   .backtoTop{display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; 
-  border: 1px solid $blackBg; transition: .5s;
-    &:hover{background-color: $blackBg;
-      svg{stroke: $whiteBg; fill: $whiteBg;}
-    }
-  }
+  border: 1px solid $blackBg; transition: .5s;}
 }
 
 #container{position: relative; display: flex;}
@@ -166,9 +154,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
       border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08); background-color: #eee;
         &.block{display: block;}
         li{padding-bottom: 8px; border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);
-          a{display: block; font-family: $d-fz; font-size: 18px; color: $c70;
-            &:hover{text-decoration: underline;}
-          }
+          a{display: block; font-family: $d-fz; font-size: 18px; color: $c70;}
           &.active{
             a{color: $emphasisType01;}
           }
@@ -193,9 +179,6 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
         background-repeat: no-repeat; background-position: center; background-size: 30px 30px;
         &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: -5px; top: -5px; z-index: -1;
           width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
-        &:hover{
-          &:before{opacity: 1; visibility: visible;}
-        }
       }
       &.none{display: none;}
     }
@@ -210,7 +193,6 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
               >a,span{width: auto; height: auto; color: $c20;text-align: center; white-space: nowrap; font-size: 12px;}
               &:before{display: none;}
               +li{margin-left: 0;}
-              &:hover{background-color: rgba($color: $cccBg, $alpha: 0.8);}
             }
           }
           &.active{display: block;}
@@ -223,32 +205,13 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
         &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: 50%; transform: translateX(-50%); top: -5px; z-index: -1;
         width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
         button,a{display: block; width: 30px;height: 30px;
-          &.btnMail{background: url("../../images/ico/ico-mail.svg")no-repeat center;
-            &:hover{
-              .toolTip.mail{opacity: 1; visibility: visible;}
-            }
-          }
-          &.btnShare{background: url("../../images/ico/ico-share-bk.svg")no-repeat center;
-            &:hover{
-              .toolTip.share{opacity: 1; visibility: visible;}
-            }
-          }
-          &.btnMore{background: url("../../images/ico/ico-more.svg")no-repeat center;
-            &:hover{
-              .toolTip.more{opacity: 1; visibility: visible;}
-            }
-          }
+          &.btnMail{background: url("../../images/ico/ico-mail.svg")no-repeat center;}
+          &.btnShare{background: url("../../images/ico/ico-share-bk.svg")no-repeat center;}
+          &.btnMore{background: url("../../images/ico/ico-more.svg")no-repeat center;}
           &.btnDarkMode{width: 30px; height: 30px; background-image: url("../images/ico/ico-brightness.png"); background-position: center;
-          background-repeat: no-repeat; background-size: 30px 30px;
-            &:hover{
-              .toolTip.more{opacity: 1; visibility: visible;}
-            }
-          }
+          background-repeat: no-repeat; background-size: 30px 30px;}
         }
         +li{margin-left: 30px;}
-        &:hover{
-          &:before{opacity: 1; visibility: visible;}
-        }
       }
     }
 
@@ -349,12 +312,8 @@ box-shadow: 0px 0px 8px rgba($color: $blackBg, $alpha: 0.35);
 }
 
 a{
-  &.link{margin: 0px 5px 0 3px; color: $emphasisType01; font-family: 'Noto Sans Medium';
-    &:hover{text-decoration: underline;}
-  }
-  &.mail{margin: 0px 5px 0 3px; color: $emphasisType02; font-family: 'Noto Sans Medium';
-    &:hover{text-decoration: underline;}
-  }
+  &.link{margin: 0px 5px 0 3px; color: $emphasisType01; font-family: 'Noto Sans Medium';}
+  &.mail{margin: 0px 5px 0 3px; color: $emphasisType02; font-family: 'Noto Sans Medium';}
 }
 
 .button{display: flex; align-items: center; justify-content: center; height: 34px; line-height: 34px;
@@ -413,6 +372,7 @@ code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !importa
     &::-webkit-scrollbar-thumb:active { background: #808080; }
   }
 }
+pre[class*=language-]{padding: 16px !important;}
 
 // update page list
 .boardList{margin-top: 40px;
@@ -434,9 +394,7 @@ code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !importa
       .boardBox{display: flex;
         .boardItem{display: inherit; justify-content: center;
           &:first-child{width: 12%;}
-          &:last-child{flex: 1;
-            &.underLine:hover{text-decoration: underline;}
-          }
+          &:last-child{flex: 1;}
         }
       }
       &:first-child{border-top: 0;}
@@ -460,31 +418,20 @@ code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !importa
 .pager{display: flex; justify-content: center; align-items: center; margin-top: 60px;
   div:not(.pageNumbers){display: flex; justify-content: center; width: 30px; height: 30px;
   box-sizing: border-box; border: 1px solid $cddd; border-radius: 4px; cursor: pointer; font-size: 16px;
-  transition: 0.35s ease-in-out;
-    &:hover:not(.disabled){border-color: $blackBg;}
-  }
+  transition: 0.35s ease-in-out;}
 
   .firstPage,.previousPage,.nextPage,.lastPage{
     &.disabled{cursor: default; background-color: rgba($color: #ccc, $alpha: 0.5);}
   }
-  .firstPage{background: url("../../images/ico/ico-pagi-first.png")no-repeat center;
-    &:hover:not(.disabled){background: url("../../images/ico/ico-pagi-first-hover.png")no-repeat center;}
-  }
-  .previousPage{margin-left: 5px; background: url("../../images/ico/ico-pagi-prev.png")no-repeat center;
-    &:hover:not(.disabled){background: url("../../images/ico/ico-pagi-prev-hover.png")no-repeat center;}
-  }
-  .nextPage{margin-right: 5px; background: url("../../images/ico/ico-pagi-next.png")no-repeat center;
-    &:hover:not(.disabled){background: url("../../images/ico/ico-pagi-next-hover.png")no-repeat center;}
-  }
-  .lastPage{background: url("../../images/ico/ico-pagi-last.png")no-repeat center;
-    &:hover:not(.disabled){background: url("../../images/ico/ico-pagi-last-hover.png")no-repeat center;}
-  }
+  .firstPage{background: url("../../images/ico/ico-pagi-first.png")no-repeat center;}
+  .previousPage{margin-left: 5px; background: url("../../images/ico/ico-pagi-prev.png")no-repeat center;}
+  .nextPage{margin-right: 5px; background: url("../../images/ico/ico-pagi-next.png")no-repeat center;}
+  .lastPage{background: url("../../images/ico/ico-pagi-last.png")no-repeat center;}
   .pageNumbers{margin: 0 50px;
     >a{display: inline-block; width: 32px; height: 32px; line-height: 32px; text-align: center; font-size: 16px;
     border: 1px solid $cddd; border-radius: 4px; font-family: $d-fz; color: rgba($color: $c222, $alpha: 0.5);
     transition: 0.35s ease-in-out;
       +a{margin-left: 5px;}
-      &.active,&:hover{border-color: $blackBg; color: rgba($color: $blackBg, $alpha: 1.0)}
     }
   }
 }
